--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -5,18 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB FINAL</title>
-
-    
+    <!-- Favicon -->
+    <link href="media/img/Favicon.svg" rel="icon" type="image/png" />
+    <!-- Enlace a Font Awesome -->
+    <script src="https://kit.fontawesome.com/bf9108fbd8.js" crossorigin="anonymous"></script>
+    <!-- Enlaces a css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/aos.css">
+    <!-- Enlaces a JA AOS -->
+    <script src="js/aos.js"></script>
+    <!-- Enlace a fuente -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-
-    </header>
-    <main>
         <nav>
 
         </nav>
-
+    </header>
+    <main>
         <section>
 
         </section>
