--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -11,9 +11,9 @@
     <script src="https://kit.fontawesome.com/bf9108fbd8.js" crossorigin="anonymous"></script>
     <!-- Enlaces a css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/aos.css">
-    <!-- Enlaces a JA AOS -->
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- Enlaces a JS AOS -->
     <script src="js/aos.js"></script>
     <!-- Enlace a fuente -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,5 +38,10 @@
     <footer>
 
     </footer>
+
+    <script>AOS.init();</script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-3.6.1.min.js"></script>    
+    <script src="js/script.js"></script>
 </body>
 </html>
