--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -21,11 +21,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
 
+    <header>
+        <nav id="menu">
+            <div id="logo">
+                <img src="media\img\Logo Horizontal.png" alt="logo">
+            </div>
+            <ul>
+                <li>
+                    <button>
+                        <a href="merch.html">Merch</a>
+                    </button>
+                </li>
+                <li>
+                    <a href="#">¿Dónde estamos?</a>
+                </li>
+                <li>
+                    <a href="#">About Us</a>
+                </li>
+                <li>
+                    <a href="https://buildafitblog.cargo.site/">Blog</a>
+                </li>
+                <li>
+                    <i class="fas fa-bars"></i>
+                </li>
+            </ul>
         </nav>
     </header>
+
     <main>
         <section>
 
