--- a/WEB_PRACTICA_FINAL/reservas.html
+++ b/WEB_PRACTICA_FINAL/reservas.html
@@ -18,18 +18,26 @@
     <!-- Enlace a fuente -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-
+    
         </nav>
     </header>
-    <main>
-        <section>
 
-        </section>
+
+<main>
+    
+        <div class="aboutus">
+            <div>
+                <h1>ABOUT US</h1>
+            </div>          
+        </div>
 
         <section>
 
