--- a/WEB_PRACTICA_FINAL/reservas.html
+++ b/WEB_PRACTICA_FINAL/reservas.html
@@ -18,10 +18,9 @@
     <!-- Enlace a fuente -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sora:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
+    <!-- iconosfontawesome: -->
+    <script src="https://kit.fontawesome.com/26e0145f92.js" crossorigin="anonymous"></script> 
 </head>
 <body>
     <header>
@@ -35,7 +34,10 @@
     
         <div class="aboutus">
             <div>
-                <h1>ABOUT US</h1>
+                <h1>ABOUT US
+                <i class="fa-solid fa-share"></i>
+            </h1>
+
             </div>          
         </div>
 
