--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -28,11 +28,17 @@
     </header>
     <main>
         <section class="build-a-xmas">
-           <div>
-                <div>
-
+           <div class="build-a-xmas-2">
+                <div class="first-imgs-merch">
+                    <div class="square-stars">
+                        <img class="star" src="media/img/estrellas_verde.png" alt="Estrella verde"> </img>
+                        <img class="star" src="media/img/estrellas_morado.png" alt="Estrella morada"> </img>
+                    </div>
+                    <img class="stars-2" src="media/img/emedeamores.jpg" alt="Eme de amores">
+                    <img class="stars-2" src="media/img/estrellas_verde.png" alt="Estrella verde">
+                    <img class="stars-2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
                 </div>
-                <div>
+                <div class="text-btn-eme-de-amores">
                     <div>
                         <h1>
                             EME DE AMORES BUILD-A-XMAS
