--- a/WEB_PRACTICA_FINAL/reservas.html
+++ b/WEB_PRACTICA_FINAL/reservas.html
@@ -21,6 +21,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
     <!-- iconosfontawesome: -->
     <script src="https://kit.fontawesome.com/26e0145f92.js" crossorigin="anonymous"></script> 
+
+
 </head>
 <body>
     <header>
@@ -31,20 +33,46 @@
 
 
 <main>
-    
-        <div class="aboutus">
+    <section class="sectionaboutus">
+        <div class="aboutustext">
             <div>
-                <h1>ABOUT US
-                <i class="fa-solid fa-share"></i>
-            </h1>
-
-            </div>          
+                <h1>ABOUT US 
+                <img src="media/iconos/flecha.svg" alt=""></h1>
+                <p><b>Build-a-Fit</b> es un negocio de moda personalizable.<br><br>Ofrecemos diferentes modelos base de prendas de ropa que podrán ser diseñados por cada cliente, de modo que la experiencia de compra es 100% interactiva ya que cada usuario tendrá la oportunidad de <b>crear su propio outfit.</b></nbsp></p>    
+            </div>      
         </div>
 
-        <section>
+        <div class="churrourban">
+              <img src="media/img/Churrourban.png" alt=""></h1>
+        </div>
+    </section>
 
-        </section>
-    </main>
+    <section class="sectionparallax">
+        <div class="edificio">
+             <img src="media/img/fachada.jpg" alt="">
+        </div>
+    </section>
+    
+
+    <section class="sectionaboutus">
+        <div class="aboutustext">
+            <div>
+                <h1>REVIEWS
+                <img src="media/iconos/flecha.svg" alt=""></h1>
+                <p><b>Build-a-Fit</b> es un negocio de moda personalizable.<br><br>Ofrecemos diferentes modelos base de prendas de ropa que podrán ser diseñados por cada cliente, de modo que la experiencia de compra es 100% interactiva ya que cada usuario tendrá la oportunidad de <b>crear su propio outfit.</b></nbsp></p>    
+            </div>      
+        </div>
+
+        <div class="churrourban">
+              <img src="media/img/Churrourban.png" alt=""></h1>
+        </div>
+    </section>
+
+
+
+
+
+</main>
     <footer>
 
     </footer>
