--- a/WEB_PRACTICA_FINAL/reservas.html
+++ b/WEB_PRACTICA_FINAL/reservas.html
@@ -36,8 +36,7 @@
     <section class="sectionaboutus">
         <div class="aboutustext">
             <div>
-                <h1>ABOUT US 
-                <img src="media/iconos/flecha.svg" alt=""></h1>
+                <h1>ABOUT US<img src="media/iconos/flecha.svg" alt=""></h1>
                 <p><b>Build-a-Fit</b> es un negocio de moda personalizable.<br><br>Ofrecemos diferentes modelos base de prendas de ropa que podrán ser diseñados por cada cliente, de modo que la experiencia de compra es 100% interactiva ya que cada usuario tendrá la oportunidad de <b>crear su propio outfit.</b></nbsp></p>    
             </div>      
         </div>
@@ -47,9 +46,12 @@
         </div>
     </section>
 
-    <section class="sectionparallax">
-        <div class="edificio">
-             <img src="media/img/fachada.jpg" alt="">
+    <!-- imagen fija -->
+    <section>
+        <div class="imagen_fondo">
+            <div class="botonparallax">
+                 <button type="button" class="btn btn-outline-secondary btn-lg">¡Mira nuestro blog!</button>
+            </div>
         </div>
     </section>
     
@@ -57,8 +59,7 @@
     <section class="sectionaboutus">
         <div class="aboutustext">
             <div>
-                <h1>REVIEWS
-                <img src="media/iconos/flecha.svg" alt=""></h1>
+                <h1>REVIEWS<img src="media/iconos/flecha.svg" alt=""></h1>
                 <p><b>Build-a-Fit</b> es un negocio de moda personalizable.<br><br>Ofrecemos diferentes modelos base de prendas de ropa que podrán ser diseñados por cada cliente, de modo que la experiencia de compra es 100% interactiva ya que cada usuario tendrá la oportunidad de <b>crear su propio outfit.</b></nbsp></p>    
             </div>      
         </div>
