--- a/WEB_PRACTICA_FINAL/reservas.html
+++ b/WEB_PRACTICA_FINAL/reservas.html
@@ -25,7 +25,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="styles.css"> <!-- Agrega tu archivo de estilos aquí -->
 </head>
 <body>
     <header>
@@ -57,16 +59,17 @@
         </div>
     </section>
 
+    <!-- reviews -->
     <section class="reviews">
         <div class="aboutustext">
             <div>
                 <h1>REVIEWS<img src="media/iconos/flecha.svg" alt=""></h1>
+                <h2>Reseñas de nuestros clientes</h2>
             </div>
     </section>    
 
     <section class="sectionreview">
     <div class="carrusel">
-        <h2 class="title">Reseñas de nuestros clientes</h2>
         <!-- 1º carrusel -->
         <div class="card">
             <!-- box code -->
