--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -67,6 +67,37 @@
             </div>
             
         </nav>
+
+        <div id="portada_home" class="container">
+            <div class="row">
+                <div class="col">
+                    <img class="starL" src="media\img\estrellas_verde.png" alt="green star">
+                    <img class="starM" src="media\img\estrellas_morado.png" alt="purple star">
+                </div>
+                <div class="col-5">
+                    <img class="logo_header" src="media\img\LOGO_principal.png" alt="logo_baf">
+                    <img class="gato_header" src="media\img\gato_churro.png" alt="gato">
+                </div>
+                <div class="col">
+                    <img class="starL" src="media\img\estrellas_morado.png" alt="purple star">
+                    <div>
+                        <img class="starM" src="media\img\estrellas_verde.png" alt="green star">
+                        <img class="starS" src="media\img\estrellas_rosa.png" alt="pink star">
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="marquee">
+            <ul class="marquee_content">
+                <li class="marquee_item">
+                    <h2>Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome</h2>
+                </li>
+                <li class="marquee_item">
+                    <h2> Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome Welcome</h2>
+                </li>
+            </ul>
+        </div>
     </header>
 
     <main>
