portada Media queries

--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -68,7 +68,7 @@
             
         </nav>
 
-        <div id="portada_home" class="container">
+        <div id="portada_home" class="container-xl-center">
             <div class="row">
                 <div class="col">
                     <img class="starL" src="media\img\estrellas_verde.png" alt="green star">
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col">
                     <img class="starL" src="media\img\estrellas_morado.png" alt="purple star">
-                    <div>
+                    <div class="twostars">
                         <img class="starM" src="media\img\estrellas_verde.png" alt="green star">
                         <img class="starS" src="media\img\estrellas_rosa.png" alt="pink star">
                     </div>
