--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -101,8 +101,25 @@
     </header>
 
     <main>
-        <section>
-
+        <section id="intro">
+            <div id="text">
+                <div class="text_img">
+                    <h3 class="LED_rosa">Build-a-Fit</h3>
+                    <img src="media\img\gato_churro.png" alt="gato">
+                </div>
+                
+                <h3>es una fábrica</h3>
+            
+                <div>
+                    <h3>de</h3>
+                    <h3 class="LED_verde">ideas,</h3>
+                </div>
+                <div>
+                    <h3 class="LED_morado">diversión</h3>
+                    <h3>y</h3>
+                </div>
+                <h3 class="LED_rosa">creatividad</h3>
+            </div>
         </section>
 
         <section>
