--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -102,6 +102,11 @@
 
     <main>
         <section id="intro">
+            <div id="starLine">
+                <img class="starS" src="media\img\estrellas_rosa.png" alt="pink star">
+                <img class="starM" src="media\img\estrellas_verde.png" alt="green star">
+                <img class="starL" src="media\img\estrellas_morado.png" alt="purple star">
+            </div>
             <div id="text">
                 <div class="text_img">
                     <h3 class="LED_rosa">Build-a-Fit</h3>
@@ -118,8 +123,14 @@
                     <h3 class="LED_morado">diversión</h3>
                     <h3>y</h3>
                 </div>
-                <h3 class="LED_rosa">creatividad</h3>
+                
+                <div id="starGroup">
+                    <h3 class="LED_rosa">creatividad</h3>
+                    <img src="media\img\StarsGroup.png" alt="StarsGroup">
+                    <img src="media\img\gato_churro.png" alt="gato">
+                </div>
             </div>
+            
         </section>
 
         <section>
