html sección botones

--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -133,7 +133,53 @@
             
         </section>
 
-        <section>
+        <section id="botones">
+            <div class="container-center">
+                <div class="row">
+                    <div class="column">
+                        <img class="starM" src="media\img\estrellas_morado.png" alt="estrellas_morado">
+                        <div>
+                            <h2>DÓNDE ESTAMOS</h2>
+                        </div>
+                        <button>
+                            <h3>Descubrir</h3>
+                            <svg class="flecha_btn" width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.70312 1L20.5038 19.8006" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M20.5038 1V19.8006H1.70312" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>                         
+                        </button>
+                        <img class="starS" src="media\img\estrellas_morado.png" alt="estrellas_morado">
+                    </div>
+                    <div class="column">
+                        <img class="starM" src="media\img\estrellas_verde.png" alt="estrellas_verde">
+                        <div>
+                            <h2>ACCEDER A NUESTRO BLOG</h2>
+                        </div>
+                        <button>
+                            <h3>Acceder</h3>
+                            <svg class="flecha_btn" width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.70312 1L20.5038 19.8006" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M20.5038 1V19.8006H1.70312" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>                         
+                        </button>
+                        <img class="starS" src="media\img\estrellas_verde.png" alt="estrellas_verde">
+                    </div>
+                    <div class="column">
+                        <img class="starM" src="media\img\estrellas_rosa.png" alt="estrellas_rosa">
+                        <div>
+                            <h2>TIENDA DE MERCH</h2>
+                        </div>
+                        <button>
+                            <h3>Comprar</h3>
+                            <svg class="flecha_btn" width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.70312 1L20.5038 19.8006" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M20.5038 1V19.8006H1.70312" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>                       
+                        </button>
+                        <img class="starS" src="media\img\estrellas_rosa.png" alt="estrellas_rosa">
+                    </div>
+                </div>
+            </div>
 
         </section>
     </main>
