--- a/WEB_PRACTICA_FINAL/reservas.html
+++ b/WEB_PRACTICA_FINAL/reservas.html
@@ -163,11 +163,31 @@
 
         <div class="redesaboutus">
             <div class="redes">
-                <i class="fa-solid fa-envelope"style="font-size:4.5vw;"></i>
+                <i class="fa-brands fa-instagram"style="font-size:4.5vw;"></i>
                 <i class="fa-brands fa-tiktok"style="font-size:4.5vw;"></i>
                 <i class="fa-brands fa-youtube"style="font-size:4.5vw;"></i>
                 <i class="fa-brands fa-twitter"style="font-size:4.5vw;"></i>
               </div> 
+            <div class="infofooter">
+                <div class="footer-section">
+                   <h5>Build-a-Fit</h5>
+                   <p>Quienes somos</p>
+                   <p>Build-a-Club</p>
+                   <p>Blog</p>
+                   <p>Reservas</p>
+                   <p>Merchandising</p>
+            </div>
+            <div class="footer-section">
+                <h3>Build-a-Club</h3>
+                <p>Información sobre el Build-a-Club, si es relevante para tu sitio web.</p>
+            </div>
+
+    <div class="footer-section">
+        <h3>Blog</h3>
+        <p>Enlaces o información relacionada con tu blog.</p>
+    </div>
+
+            </div>
         </div>
     </div>
           
