--- a/WEB_PRACTICA_FINAL/reservas.html
+++ b/WEB_PRACTICA_FINAL/reservas.html
@@ -151,10 +151,10 @@
 
             <div class="redesaboutus">
                <div class="redes">
-                  <i class="fa-brands fa-instagram"style="font-size:4.5vw;"></i>
-                  <i class="fa-brands fa-tiktok"style="font-size:4.5vw;"></i>
-                  <i class="fa-brands fa-youtube"style="font-size:4.5vw;"></i>
-                  <i class="fa-brands fa-twitter"style="font-size:4.5vw;"></i>
+                  <i class="fa-brands fa-instagram"style="font-size:4.1vw;"></i>
+                  <i class="fa-brands fa-tiktok"style="font-size:4.1vw;"></i>
+                  <i class="fa-brands fa-youtube"style="font-size:4.1vw;"></i>
+                  <i class="fa-brands fa-twitter"style="font-size:4.1vw;"></i>
                 </div> 
             <div class="infofooter">
                 <div class="footer-section">
@@ -189,7 +189,7 @@
             </div>
         </div>
         <div class="newsletter_wrapper">
-            <h2>¿Quieres unirte a nuestra newsletter?</h2>
+            <h2>¿Quieres unirte <br>a nuestra newsletter?</h2>
             <p>Consigue un <b>10% de descuento</b>.<br> Suscríbete a nuestra newsletter y tendrás acceso a
                 novedades y ventajas exclusivas en tu email.</p>
     
