--- a/WEB_PRACTICA_FINAL/reservas.html
+++ b/WEB_PRACTICA_FINAL/reservas.html
@@ -94,7 +94,7 @@
                     <image src="media/img/Usuario3.png"alt></image>
                       <p><b>Pedro Osacar</b></p>
                     <image src="media/iconos/Icons.png"alt></image>
-                    <p>Plan con amigos</p>
+                    <p>¡Planazo!</p>
                   </div>
         
                   <div class="card" id="3">
@@ -123,7 +123,7 @@
 
         <section>
  
-            <div class="ubicationtitle">
+            <div class="aboutustitle">
                 <div>
                     <h1>UBICACIÓN<img src="media/iconos/flecha.svg" alt=""></h1>
                 </div>
