media queries seccion botones

--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -158,7 +158,7 @@
                         </div>
                         <img class="starS" src="media\img\estrellas_verde.png" alt="estrellas_verde">
                         <button class="verde">
-                            <a href="#">Acceder</a>
+                            <a href="https://buildafitblog.cargo.site/">Acceder</a>
                             <svg class="flecha_btn" width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.70312 1L20.5038 19.8006" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M20.5038 1V19.8006H1.70312" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -173,7 +173,7 @@
                         </div>
                         <img class="starS" src="media\img\estrellas_rosa.png" alt="estrellas_rosa">
                         <button class="rosa">
-                            <a href="#">Comprar</a>
+                            <a href="merch.html">Comprar</a>
                             <svg class="flecha_btn" width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.70312 1L20.5038 19.8006" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M20.5038 1V19.8006H1.70312" stroke="#F4F4ED" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
