--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -185,6 +185,28 @@
             </div>
 
         </section>
+
+        <section id="community">
+            <div class="section_title">
+                <h1 class="LED_rosa">COMMUNITY</h1>
+                <img class="LED_flecha" src="media\img\flecha.png" alt="flecha">
+            </div>
+            <div id="gallery_community">
+                <div class="gallery_item">
+                    <img src="media\img\community1.webp" alt="community1">
+                </div>
+                <div class="gallery_item">
+                    <img src="media\img\community2.jpg" alt="community2">
+                </div>
+                <div class="gallery_item">
+                    <img src="media\img\community3.jpg" alt="community3">
+                </div>
+                <div class="gallery_item">
+                    <img src="media\img\community4.jpg" alt="community4">
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
