--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -13,7 +13,7 @@
     <!-- Enlaces a CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/styles_reservas.css" />
+    <link rel="stylesheet" href="css/styles_aboutus.css" />
     <!-- Enlaces a JS AOS -->
     <script src="js/aos.js"></script>
     <!-- Enlace a fuente -->
