--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -102,12 +102,12 @@
 
     <main>
         <section id="intro">
-            <div id="starLine">
+            <div id="starLine" data-aos="fade-up">
                 <img class="starS" src="media\img\estrellas_rosa.png" alt="pink star">
                 <img class="starM" src="media\img\estrellas_verde.png" alt="green star">
                 <img class="starL" src="media\img\estrellas_morado.png" alt="purple star">
             </div>
-            <div id="text">
+            <div id="text" data-aos="fade-up-right">
                 <div class="text_img">
                     <h3 class="LED_rosa">Build-a-Fit</h3>
                     <img src="media\img\gato_churro.png" alt="gato">
@@ -134,7 +134,7 @@
         </section>
 
         <section id="botones">
-            <div class="container-center">
+            <div class="container-center" data-aos="fade-up">
                 <div class="row">
                     <div class="column">
                         <img class="starM purple" src="media\img\estrellas_morado.png" alt="estrellas_morado">
@@ -187,7 +187,7 @@
         </section>
 
         <section id="community">
-            <div class="section_title">
+            <div class="section_title" data-aos="fade-up-right">
                 <h1 class="LED_rosa">COMMUNITY</h1>
                 <img class="LED_flecha" src="media\img\flecha.png" alt="flecha">
             </div>
