--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -180,8 +180,8 @@
                         <p>Condiciones de uso</p>
                         <p>Condiciones de contratación</p>
                         <p>Condiciones para vender</p>
-                        <p>Política de protección de datos</p>
-                        <p>Política de devoluciones y anulaciones</p>
+                        <p>Política de privacidad</p>
+                        <p>Política de devoluciones</p>
                         <p>Política de cookies</p>
                     </div>
                 </div>
@@ -200,6 +200,7 @@
                 </div>
             </div>
         </div>
+    </footer>
     
         <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
@@ -246,4 +247,6 @@
                 }
             }
         </script>
-    </footer>
+
+</body>
+</html>
