--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -35,7 +35,48 @@
 <body>
     <header>
         <nav>
-          
+            <div id="menu">
+                <div id="logo">
+                    <img src="media\img\Logo Horizontal.png" alt="logo">
+                </div>
+                <ul>
+                    <li>
+                        <button>
+                            <a href="merch.html">Merch</a>
+                        </button>
+                    </li>
+                    <li>
+                        <a href="#">¿Dónde estamos?</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="https://buildafitblog.cargo.site/">Blog</a>
+                    </li>
+                    <li class="hamburger">
+                        <i class="fas fa-bars"></i>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="toggle_menu">
+                <ul>
+                    <li>
+                        <a href="merch.html">Merch</a>
+                    </li>
+                    <li>
+                        <a href="#">¿Dónde estamos?</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="https://buildafitblog.cargo.site/">Blog</a>
+                    </li>
+                </ul>
+            </div>
+            
         </nav>
     </header>
 
