--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -86,17 +86,19 @@
         </div>
         <div class="sectionaboutus">
 
-            <div class="infoaboutus">
+          <div class="infoaboutus">
                 <p><b>Build-a-Fit</b> es un negocio de moda personalizable.<br><br>Ofrecemos diferentes modelos
                     base de prendas de ropa que podrán ser diseñados por cada cliente, de modo que la experiencia
                     de compra es 100% interactiva ya que cada usuario tendrá la oportunidad de <b>crear su propio
                     outfit.</b></nbsp></p>
-            </div>
-
-            <div class="churrourban"> 
-                <img id="churrourbanImage" src="media/img/Churrourban.png" alt="">
-            </div>
-        </div>
+                </div>
+             <div class="churrourban"> 
+                <img class="churrourbanImage" src="media/img/Churrourban.png" alt="">
+             </div>
+          </div>
+           
+          </div>
+     </div>
 
       
 
@@ -179,7 +181,7 @@
             <div class="sectionubication">
               <div class="google-maps">
                 <div>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3035.9226174148907!2d-3.6971967242817954!3d40.454849653318796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422902920f8a35%3A0x1dd626e4038d0c38!2sC.%20de%20Orense%2C%2036%2C%2028020%20Madrid!5e0!3m2!1ses!2ses!4v1699204007367!5m2!1ses!2ses" width="680" height="340" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.6367026201237!2d-3.702065300000001!3d40.41689830000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422880bce1ea29%3A0xc43de81ba6255e2e!2sApple%20Store!5e0!3m2!1ses!2ses!4v1704369318865!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>    
               </div>
 
