--- a/WEB_PRACTICA_FINAL/index.html
+++ b/WEB_PRACTICA_FINAL/index.html
@@ -22,11 +22,13 @@
 </head>
 <body>
     
-    <header>
+    <header id="home">
         <nav>
             <div id="menu">
                 <div id="logo">
-                    <img src="media\img\Logo Horizontal.png" alt="logo">
+                    <a href="#home">
+                        <img src="media\img\Logo Horizontal.png" alt="logo">
+                    </a>
                 </div>
                 <ul>
                     <li>
@@ -261,7 +263,59 @@
         </section>
 
     </main>
-    <footer>
+    
+    <footer>  
+        <div class="footer">       
+            <div class="redesaboutus">           
+                <div class="redes">            
+                    <i class="fa-brands fa-instagram"></i>              
+                    <i class="fa-brands fa-tiktok"></i>               
+                    <i class="fa-brands fa-youtube"></i>               
+                    <i class="fa-brands fa-twitter"></i>           
+                </div>         
+                <div class="infofooter">               
+                    <div class="footer-section">                   
+                        <h5><b>Build-a-Fit</b></h5>                   
+                        <p><a href="#quienes-somos">Quiénes somos</a></p>                
+                        <p>Build-a-Club</p>                
+                        <p><a href="WEB_PRACTICA_FINAL/reservas.html/">Merchandising</a></p>                  
+                        <p><a href="WEB_PRACTICA_FINAL/reservas.html/">Reservas</a></p>                   
+                        <p><a href="https://buildafitblog.cargo.site/">Blog</a></p>              
+                    </div>            
+                    <div class="footer-section">                    
+                        <h5><b>Ayuda</b></h5>                  
+                        <p>Devoluciones</p>                  
+                        <p>Gastos y formas de envío</p>                  
+                        <p>Preguntas frecuentes</p>                   
+                        <p>Estado de tu pedido</p>                  
+                        <p>Incidencias de pedidos</p>                   
+                        <p>Contacta con nosotros</p>               
+                    </div>               
+                    <div class="footer-section">                   
+                        <h5><b>Información legal</b></h5>                 
+                        <p>Condiciones de uso</p>                  
+                        <p>Condiciones de contratación</p>                   
+                        <p>Condiciones para vender</p>                    
+                        <p>Política de protección de datos</p>                  
+                        <p>Política de devoluciones y anulaciones</p>                 
+                        <p>Política de cookies</p>          
+                    </div>         
+                </div>       
+            </div>     
+            <div class="newsletter_wrapper">           
+                <h2>¿Quieres unirte <br>a nuestra newsletter?</h2>           
+                <p>Consigue un <b>10% de descuento</b>.<br> Suscríbete a nuestra newsletter y tendrás acceso a              
+                    novedades y ventajas exclusivas en tu email.</p>           
+                <div class="input">              
+                    <div class="input-field">                   
+                        <input type="email" id="emailInput" placeholder="Escribe su correo electrónico" spellcheck="false" required>             
+                    </div>          
+                </div>           
+                <div class="enviar">             
+                    <button onclick="validarCorreo()">Enviar</button>         
+                </div>       
+            </div>   
+        </div>
 
     </footer>
 
