--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -37,7 +37,7 @@
         <nav>
             <div id="menu">
                 <div id="logo">
-                    <img src="media\img\Logo Horizontal.png" alt="logo">
+                    <img src="media/img/Logo Horizontal.png" alt="logo">
                 </div>
                 <ul>
                     <li>
@@ -59,7 +59,7 @@
                     </li>
                 </ul>
             </div>
-
+        
             <div class="toggle_menu">
                 <ul>
                     <li>
@@ -76,7 +76,6 @@
                     </li>
                 </ul>
             </div>
-            
         </nav>
     </header>
 
