--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -23,7 +23,48 @@
 <body>
     <header>
         <nav>
+            <div id="menu">
+                <div id="logo">
+                    <img src="media\img\Logo Horizontal.png" alt="logo">
+                </div>
+                <ul>
+                    <li>
+                        <button>
+                            <a href="merch.html">Merch</a>
+                        </button>
+                    </li>
+                    <li>
+                        <a href="#">¿Dónde estamos?</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="https://buildafitblog.cargo.site/">Blog</a>
+                    </li>
+                    <li class="hamburger">
+                        <i class="fas fa-bars"></i>
+                    </li>
+                </ul>
+            </div>
 
+            <div class="toggle_menu">
+                <ul>
+                    <li>
+                        <a href="merch.html">Merch</a>
+                    </li>
+                    <li>
+                        <a href="#">¿Dónde estamos?</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a href="https://buildafitblog.cargo.site/">Blog</a>
+                    </li>
+                </ul>
+            </div>
+            
         </nav>
     </header>
     <main>
@@ -34,9 +75,12 @@
                         <img class="star star-1" src="media/img/estrellas_verde.png" alt="Estrella verde"> </img>
                         <img class="star star-2" src="media/img/estrellas_morado.png" alt="Estrella morada"> </img>
                     </div>
-                    <img class="stars stars-1" src="media/img/emedeamores.jpg" alt="Eme de amores"> </img>
-                    <img class="stars stars-2" src="media/img/estrellas_verde.png" alt="Estrella verde"></img>
-                    <img class="stars stars-3" src="media/img/estrellas_rosa.png" alt="Estrella rosa"></img>
+                    <div class="eme">
+                        <img class="stars stars-1" src="media/img/emedeamores.jpg" alt="Eme de amores"> </img>
+                        <img class="stars stars-2" src="media/img/estrellas_verde.png" alt="Estrella verde"></img>
+                        <img class="stars stars-3" src="media/img/estrellas_rosa.png" alt="Estrella rosa"></img>
+                    </div>
+                    
                 </div>
                 <div class="text-btn-eme-de-amores">
                     <div class="txt-eme">
@@ -55,11 +99,11 @@
         </section>
 
         <section class="sec-merch">
-            <div>
+            <div class="section_title">
                 <h3>
                     MERCHANDISING
                 </h3>
-                <img src="media/img/flecha_negra.svg" alt="flecha"> </img>
+                <img src="media/img/flecha.png" alt="flecha"> </img>
             </div>
             <div class="album">
                 <div class="container">
@@ -413,6 +457,60 @@
     </main>
     <footer>
 
+<!-- Contenido del footer -->
+
+<footer>
+    <div class="footer">
+        <div class="redesaboutus">
+            <div class="redes">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-tiktok"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="infofooter">
+                <div class="footer-section">
+                    <h5><b>Build-a-Fit</b></h5>
+                    <p><a href="#quienes-somos">Quiénes somos</a></p>
+                    <p>Build-a-Club</p>
+                    <p><a href="WEB_PRACTICA_FINAL/reservas.html/">Merchandising</a></p>
+                    <p><a href="WEB_PRACTICA_FINAL/reservas.html/">Reservas</a></p>
+                    <p><a href="https://buildafitblog.cargo.site/">Blog</a></p>
+                </div>
+                <div class="footer-section">
+                    <h5><b>Ayuda</b></h5>
+                    <p>Devoluciones</p>
+                    <p>Gastos y formas de envío</p>
+                    <p>Preguntas frecuentes</p>
+                    <p>Estado de tu pedido</p>
+                    <p>Incidencias de pedidos</p>
+                    <p>Contacta con nosotros</p>
+                </div>
+                <div class="footer-section">
+                    <h5><b>Información legal</b></h5>  
+                    <p>Condiciones de uso</p>
+                    <p>Condiciones de contratación</p>
+                    <p>Condiciones para vender</p>
+                    <p>Política de protección de datos</p>
+                    <p>Política de devoluciones y anulaciones</p>
+                    <p>Política de cookies</p>
+                </div>
+            </div>
+        </div>
+        <div class="newsletter_wrapper">
+            <h2>¿Quieres unirte <br>a nuestra newsletter?</h2>
+            <p>Consigue un <b>10% de descuento</b>.<br> Suscríbete a nuestra newsletter y tendrás acceso a novedades y ventajas exclusivas en tu email.</p>
+            <div class="input">
+                <div class="input-field">
+                    <input type="email" id="emailInput" placeholder="Escribe su correo electrónico" spellcheck="false" required>
+                </div>
+            </div>
+            <div class="enviar">
+                <button onclick="validarCorreo()">Enviar</button>
+            </div>
+        </div>
+    </div>
+</footer>
     </footer>
 
     <script>AOS.init();</script>
