merch responsive y menu toggle

--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -25,7 +25,9 @@
         <nav>
             <div id="menu">
                 <div id="logo">
-                    <img src="media\img\Logo Horizontal.png" alt="logo">
+                    <a href="#home">
+                        <img src="media\img\Logo Horizontal.png" alt="logo">
+                    </a>
                 </div>
                 <ul>
                     <li>
