--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -39,7 +39,7 @@
                         <a href="#">¿Dónde estamos?</a>
                     </li>
                     <li>
-                        <a href="#">About Us</a>
+                        <a href="aboutus.html">About Us</a>
                     </li>
                     <li>
                         <a href="https://buildafitblog.cargo.site/">Blog</a>
@@ -110,19 +110,19 @@
             <div class="album">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-12 col-sm-6 col-lg-4">
 
                             <!-- IMG 1 -->
-                            <div class="card">
+                            <div class="galeria">
                                 <button type="button" class="btn btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     <div id="img-parent">
-                                        <img class="img-general img1" src="media/img/MERCH/camiseta 9.png" alt="">
+                                        <img class="img-general img1" src="media/img/MERCH/Pantalon 1.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
                                     </div>  
                                 </button>
                                 <div>
-                                    <div>
-                                        <h1>Camiseta</h1>
+                                    <div class="articulos">
+                                        <h1>Shorts</h1>
                                         <p>Disponible en varios tamaños y colores</p>
                                         <div>
                                             <li class="lista-btn">
@@ -200,9 +200,9 @@
                         </div>
 
 
-                        <div class="col">
+                        <div class="col-12 col-sm-6  col-lg-4">
                             <!-- IMG 2 -->
-                            <div class="card">
+                            <div class="galeria">
                                 <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     <div id="img-parent">
                                         <img class="img-general img1" src="media/img/MERCH/camiseta 10.png" alt="">
@@ -210,7 +210,7 @@
                                     </div>  
                                 </button>
                                 <div>
-                                    <div>
+                                    <div class="articulos">
                                         <h1>Camiseta</h1>
                                         <p>Disponible en varios tamaños y colores</p>
                                         <div>
@@ -227,17 +227,17 @@
                             </div>
                         </div>
                             
-                        <div class="col">
+                        <div class="col-12 col-sm-6 col-lg-4">
                             <!-- IMG 2 -->
-                            <div class="card">
+                            <div class="galeria">
                                 <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     <div id="img-parent">
-                                        <img class="img-general img1" src="media/img/MERCH/camiseta 10.png" alt="">
+                                        <img class="img-general img1" src="media/img/MERCH/camisetas 4.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
                                     </div>  
                                 </button>
                                 <div>
-                                    <div>
+                                    <div class="articulos">
                                         <h1>Camiseta</h1>
                                         <p>Disponible en varios tamaños y colores</p>
                                         <div>
@@ -254,18 +254,18 @@
                             </div>
                         </div>
 
-                        <div class="col">
+                        <div class="col-12 col-sm-6 col-lg-4">
                             <!-- IMG 2 -->
-                            <div class="card">
+                            <div class="galeria">
                                 <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     <div id="img-parent">
-                                        <img class="img-general img1" src="media/img/MERCH/camiseta 10.png" alt="">
+                                        <img class="img-general img1" src="media/img/MERCH/sudadera 1 delantera.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
                                     </div>  
                                 </button>
                                 <div>
-                                    <div>
-                                        <h1>Camiseta</h1>
+                                    <div class="articulos">
+                                        <h1>Sudadera</h1>
                                         <p>Disponible en varios tamaños y colores</p>
                                         <div>
                                             <li class="lista-btn">
@@ -281,18 +281,18 @@
                             </div>
                         </div>
 
-                        <div class="col">
+                        <div class="col-12 col-sm-6 col-lg-4">
                             <!-- IMG 2 -->
-                            <div class="card">
+                            <div class="galeria">
                                 <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     <div id="img-parent">
-                                        <img class="img-general img1" src="media/img/MERCH/camiseta 10.png" alt="">
+                                        <img class="img-general img1" src="media/img/MERCH/sudadera 2.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
                                     </div>  
                                 </button>
                                 <div>
-                                    <div>
-                                        <h1>Camiseta</h1>
+                                    <div class="articulos">
+                                        <h1>Sudadera</h1>
                                         <p>Disponible en varios tamaños y colores</p>
                                         <div>
                                             <li class="lista-btn">
@@ -308,18 +308,18 @@
                             </div>
                         </div>
 
-                        <div class="col">
+                        <div class="col-12 col-sm-6 col-lg-4">
                             <!-- IMG 2 -->
-                            <div class="card">
+                            <div class="galeria">
                                 <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     <div id="img-parent">
-                                        <img class="img-general img1" src="media/img/MERCH/camiseta 10.png" alt="">
+                                        <img class="img-general img1" src="media/img/MERCH/zapatillas.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
                                     </div>  
                                 </button>
                                 <div>
-                                    <div>
-                                        <h1>Camiseta</h1>
+                                    <div class="articulos">
+                                        <h1>Zapatillas</h1>
                                         <p>Disponible en varios tamaños y colores</p>
                                         <div>
                                             <li class="lista-btn">
@@ -330,6 +330,40 @@
                                                 <button class="btn-color btn-color-5"></button>
                                             </li>
                                         </div>
+                                    </div>        
+                                </div>   
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-6">
+                            <!-- IMG 2 -->
+                            <div class="galeria">
+                                <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                    <div id="img-parent">
+                                        <img class="img-general img1" src="media/img/MERCH/Llavero gato.png" alt="">
+                                        <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
+                                    </div>  
+                                </button>
+                                <div>
+                                    <div class="articulos">
+                                        <h1>Llavero</h1>
+                                        <p>Llavero del gato churro</p>
+                                    </div>        
+                                </div>   
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-6">
+                            <!-- IMG 2 -->
+                            <div class="galeria">
+                                <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                    <div id="img-parent">
+                                        <img class="img-general img1" src="media/img/MERCH/llavero.png" alt="">
+                                        <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
+                                    </div>  
+                                </button>
+                                <div>
+                                    <div class="articulos">
+                                        <h1>Llavero</h1>
+                                        <p>Llavero personalizable</p>
                                     </div>        
                                 </div>   
                             </div>
