mas avances galeria

--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -116,7 +116,7 @@
                             <div class="galeria">
                                 <button type="button" class="btn btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     <div id="img-parent">
-                                        <img class="img-general img1" src="media/img/MERCH/Pantalon 1.png" alt="">
+                                        <img class="img-general img1 pantalon" src="media/img/MERCH/Pantalon 1.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
                                     </div>  
                                 </button>
@@ -126,11 +126,11 @@
                                         <p>Disponible en varios tamaños y colores</p>
                                         <div>
                                             <li class="lista-btn">
-                                                <button class="btn-color btn-color-1"></button>
-                                                <button class="btn-color btn-color-2"></button>
-                                                <button class="btn-color btn-color-3"></button>
-                                                <button class="btn-color btn-color-4"></button>
-                                                <button class="btn-color btn-color-5"></button>
+                                                <button class="btn-color btn-color-1 rosa-pantalon"></button>
+                                                <button class="btn-color btn-color-2 morado-pantalon"></button>
+                                                <button class="btn-color btn-color-3 verde-pantalon"></button>
+                                                <button class="btn-color btn-color-4 blanco-pantalon"></button>
+                                                <button class="btn-color btn-color-5 negro-pantalon"></button>
                                             </li>
                                         </div>
                                     </div>        
@@ -168,19 +168,19 @@
                                                     <div class="seleccion">
                                                         <h2 class="h2-seleccion">Selecciona talla:</h2>
                                                         <li class="lista-btn">
-                                                            <button class="btn-talla">XS</button>
-                                                            <button class="btn-talla">S</button>
-                                                            <button class="btn-talla">M</button>
-                                                            <button class="btn-talla">L</button>
-                                                            <button class="btn-talla">XL</button>
-                                                            <button class="btn-talla">XXL</button>
+                                                            <button class="btn-talla btn-talla-xs">XS</button>
+                                                            <button class="btn-talla btn-talla-s">S</button>
+                                                            <button class="btn-talla btn-talla-m">M</button>
+                                                            <button class="btn-talla btn-talla-l">L</button>
+                                                            <button class="btn-talla btn-talla-xl">XL</button>
+                                                            <button class="btn-talla btn-talla-xll">XXL</button>
                                                         </li>
                                                     </div> <div class="seleccion">
                                                         <h2 class="h2-seleccion">Cantidad:</h2>
                                                         <li class="lista-btn">
                                                             <button class="btn-cantidad btn-cantidad-menos">-</button>
-                                                            <p>1</p>
-                                                            <button class="btn-cantidad">+</button>
+                                                            <p min="0" class="contador">1</p>
+                                                            <button class="btn-cantidad btn-cantidad-mas">+</button>
                                                         </li>
                                                     </div>
                                                 </div>
@@ -259,7 +259,7 @@
                             <div class="galeria">
                                 <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                     <div id="img-parent">
-                                        <img class="img-general img1" src="media/img/MERCH/sudadera 1 delantera.png" alt="">
+                                        <img class="img-general img1 img-sudadera" src="media/img/MERCH/sudadera 1 delantera.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
                                     </div>  
                                 </button>
