--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/styles_aboutus.css" />
     <!-- Enlaces a JS AOS -->
     <script src="js/aos.js"></script>
+    <!-- Enlaces a CSS AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Enlace a fuente -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +29,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <!-- Enlace a JS -->
-    <script src="WEB_PRACTICA_FINAL/js/script_aboutus.js"></script>
+    <script src="js/script_aboutus.js"></script>
 </head>
 
 <body>
@@ -169,6 +171,7 @@
         </section>
 
         <!-- google maps -->
+        <div data-aos="fade-up">
         <section id="ubication">
             <div class="aboutustitle"> 
                 <div>
@@ -190,20 +193,19 @@
                  <a href="tel:+34 (900) 868 - 532">+34 (900) 868 - 532</a>
               </div>
             </div>   
-        </section>         
+        </section>    
+    </div>     
     </main>
 
     <!-- Contenido de footer -->
     <footer>
         <div class="footer">
             <div class="redesaboutus">
-                <div data-aos="zoom-in"data-aos-duration="1400">
                 <div class="redes">
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-tiktok"></i>
                     <i class="fa-brands fa-youtube"></i>
                     <i class="fa-brands fa-twitter"></i>
-                </div>
                 </div>
                 <div class="infofooter">
                     <div class="footer-section">
