--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -114,7 +114,7 @@
 
                             <!-- IMG 1 -->
                             <div class="galeria">
-                                <button type="button" class="btn btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" data-bs-whatever="Shorts" data-bs-target="#exampleModal">
+                                <button type="button" class="btn btn-primary img-btn trigger" data-bs-toggle="modal" data-bs-target="#staticBackdrop" data-bs-titulo="Shorts" >
                                     <div id="img-parent">
                                         <img class="img-general img1 pantalon" src="media/img/MERCH/Pantalon 1.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
@@ -154,7 +154,7 @@
                                             </div>
                                             <div class="texto-modal">
                                                 <div>
-                                                    <h1 class="h1-seleccion modal-title">Camiseta</h1>
+                                                    <h1 id="modal-title" class="h1-seleccion">Camiseta</h1>
                                                     <div class="seleccion">
                                                         <h2 class="h2-seleccion">Selecciona color:</h2>
                                                         <li class="lista-btn">
@@ -203,7 +203,7 @@
                         <div class="col-12 col-sm-6  col-lg-4">
                             <!-- IMG 2 -->
                             <div class="galeria">
-                                <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" data-bs-target="#exampleModal"  data-bs-titulo="Shorts" >
+                                <button type="button" class="btn btn-2 btn-primary img-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" data-bs-target="#exampleModal" data-bs-titulo="Shorts" >
                                     <div id="img-parent">
                                         <img class="img-general img1" src="media/img/MERCH/camiseta 10.png" alt="">
                                         <img class="img-general img2" src="media/img/estrellas_rosa.png" alt="Estrella rosa">
