--- a/WEB_PRACTICA_FINAL/merch.html
+++ b/WEB_PRACTICA_FINAL/merch.html
@@ -185,7 +185,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="btn-comprar">
-                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                                                    <button type="button" class="btn btn-secondary btn-comprar-1" data-bs-dismiss="modal">
                                                         COMPRAR
                                                         <img class="flecha-merch-btn" src="media/img/flecha.svg" alt="flecha">
                                                     </button>
