--- a/WEB_PRACTICA_FINAL/aboutus.html
+++ b/WEB_PRACTICA_FINAL/aboutus.html
@@ -49,7 +49,7 @@
                         <a href="#ubication">¿Dónde estamos?</a>
                     </li>
                     <li>
-                        <a href="aboutus.html">About Us</a>
+                        <a href="aboutus.html">Sobre nosotros</a>
                     </li>
                     <li>
                         <a href="https://buildafitblog.cargo.site/">Blog</a>
